--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/awpag?createDatabaseIfNotExist
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
+spring.flyway.baselineOnMigrate = true
