--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.flyway.baselineOnMigrate = true
+api.security.token.secret=${JWT_SECRET:my-secret-key}
