--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/awpag?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.flyway.baselineOnMigrate = true
-api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+api.security.token.secret=my-secret-key-from-video
