--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+# Configurações do MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/awpag?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
-spring.flyway.baselineOnMigrate = true
 
+# Flyway
+spring.flyway.baselineOnMigrate=true
+
+# Configurações de segurança
 api.security.token.secret=my-secret-key-from-video
